feat: adding get all products and post product service into the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       PGDATA: /data/postgres
+      POSTGRES_DB: product
     volumes:
       - postgres:/data/postgres
     ports:
