--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,25 @@
 services:
   postgres:
-    container_name: psql
+    container_name: postgres_ctn
     image: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      PGDATA: /data/postgres
-      POSTGRES_DB: product
+      POSTGRES_USER: ilham
+      POSTGRES_PASSWORD: ilham
+      PGDATA: /var/lib/postgresql/data
     volumes:
-      - postgres:/data/postgres
+      - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ilham -d product"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - aromapedia
 
   pgadmin:
-    container_name: pgadmin
+    container_name: pgadmin_ctn
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@aziz.com}
@@ -27,6 +31,17 @@ services:
       - "5050:80"
     networks:
       - aromapedia
+
+  product-service:
+    build: ./product-service
+    container_name: product_service_ctn
+    ports:
+      - "8081:8081"
+    networks:
+      - aromapedia
+    depends_on:
+      postgres:
+        condition: service_healthy
 
 
 networks:
