--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   application:
     name: product-service
   datasource:
-    url: jdbc:postgresql://postgres:5432/product
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://postgres:5432/
+    username: ilham
+    password: ilham
   jpa:
     database: POSTGRESQL
     show-sql: true
